# OpenGL

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
config/: window.cfg
include/: Application.h  Camera.h  Config.h  IApplication.h  Logger.h  Player.h  Timer.h
include/DrawableObject/: DrawableObject.h
include/Entity/: Entity.h
include/Input/: Files.h  Input.h
include/Light/: BaseLight.h  DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
include/Mesh/: Mesh.h
include/Physics/Hitbox/: BaseHitbox.h
include/Render/: Framebuffer.h  HighDynamicRange.h  Vertex.h
include/Render/Map/: CubeMap.h  MappingManager.h  Texture.h
include/Render/Shader/: Shader.h  ShaderProgram.h
resource/shader/: depth.fsh  depth_frag.glsl  funcs.glsl  hdr.fsh  hdr.vsh  skybox.fsh  skybox_vert.glsl
resource/shader/light/: blinn_phong.fsh  blinn_phong.vsh  none.fsh  none.vsh  nonshading.fsh  nonshading.vsh  phong.fsh  phong.vsh
source/: Application.cpp  Camera.cpp  Config.cpp  IApplication.cpp  Main.cpp  Timer.cpp  glad.c
source/Input/: Files.cpp  Input.cpp
source/Light/: BaseLight.cpp  DirectionalLight.cpp  Light.cpp  PointLight.cpp  SpotLight.cpp
source/Reference/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
source/Render/: Framebuffer.cpp  HighDynamicRange.cpp
source/Render/Map/: CubaMap.cpp  MappingManager.cpp  Texture.cpp
source/Render/Shader/: Shader.cpp  ShaderProgram.cpp
